# medviz

./: .dockerignore  .env.dev  .env.prod  .gitignore  .mypy.ini  .mypy.ini.prod  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.make  exclude.lst  git.make  py.make  pyproject.toml  requirements.txt  slider.py
.github/workflows/: main.yml  pylint.yml
api/collage/: README.md  collage2d_stats.py  collage3d.py  feature_map_2d.py
api/features/: collage2d.py  collage3d.py
api/plot/: README.md  gif_.py  plot2Dfrom3DMostVlueMask.py  plot2d_images.py  plot2d_layered_image_mask.py  plot2d_masks.py  plot3d_.py  plot3d_images.py  plot3d_masks.py
api/preprocessing/: hu.py  mask_profile.py  mask_schema.py  match_masks_image.py  metadata.py  metadata2.py  resampling.py  resampling_segmentation.py  resampling_segmentation_bulk.py  resampling_segmentation_bulk_multiprocessing.py
api/preprocessing/resampling/: README.md  resampling_michael.py  resampling_mohsen.py  resampling_tom.py
api/utils/: profile.py
api/utils/mask/: stats.py  zero_out.py
api/utils/reader/: read.py
examples/: generate_gif.py  image_mask.py  plot_image_masks.py
medviz/: __init__.py  example.py  gif.py  helper_mask.py  helper_plot.py  image_masks_axial.py  layered.py  layered_plot.py  layered_plot2D.py  layered_plot2D_examples.py  layered_plot_examples.py  plot_image.py  plot_image_examples.py  reader.py  slider_image_mask_same.py  slider_one.py
medviz/collage/: __init__.py  compute_collage.py  main.py  stats.py
medviz/feats/: __init__.py
medviz/feats/collage/: __init__.py  collage2d.py  collage3d.py  stats.py
medviz/features/collage/: compute_collage.py  main.py
medviz/multimodal/: __init__.py  save_dicom_metadata.py  stats.py
medviz/plot/: __init__.py  gif.py  plot3d.py  plot_helpers.py
medviz/plots/: __init__.py  gif.py  helper_plot.py  layered_plot2D.py
medviz/plots/plot2d/: __init__.py  image_mask_annotated.py  image_masks.py  images.py  masks.py
medviz/plots/plot3d/: __init__.py  images.py  layered_plot.py  masks.py
medviz/preprocess/: __init__.py  hu.py  mask.py  match_image_mask.py  meta_helpers.py  metadata.py  resampling.py
medviz/utility/: __init__.py  arr.py  reader.py  utility.py
medviz/utils/: __init__.py  array_profile.py  array_threshold.py  custom_type.py  helper_mask.py  helper_path.py  helper_plot.py  helper_reader.py  log.py  reader.py  utility.py
notebooks/: image_mask.ipynb
scripts/: update_version.py
scripts/.githooks/: pre-commit
