# https://peps.python.org/pep-0621/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jigar"
authors = [
  {name = "Mohsen Hariri", email = "mhariri68@gmail.com"},
]
description = "A [simple] [general-purpose] Python template ðŸðŸš€ðŸŽ‰ðŸ¦•"
version = "0.0.2"
keywords = ["Boilerplate", "Template"]
license = {text = "GPL-3.0 License"}
# https://github.com/pypi/warehouse/issues/869
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  # "google-api-python-client==2.60.0",
  # "google-auth-oauthlib==0.5.2",
  'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools]
packages = ["pkg"]

[tool.isort]
profile = "black"
