# https://peps.python.org/pep-0621/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "medviz"
authors = [{ name = "Mohsen Hariri", email = "mohsen.hariri@case.eud" }]
description = "Medical Image Visualization Tool ðŸðŸš€ðŸŽ‰ðŸ¦•"
version = "0.0.2"
keywords = ["MRI", "CT"]
license = { text = "GPL-3.0 License" }
# https://github.com/pypi/warehouse/issues/869
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  # "google-api-python-client==2.60.0",
  # "google-auth-oauthlib==0.5.2",
  "numpy==1.21.2",
  'importlib-metadata; python_version<"3.8"',
  "matplotlib==3.4.3",
  "nibabel==3.2.1",
]

[tool.setuptools]
packages = ["medviz"]

[tool.isort]
profile = "black"
